[package]
name = "link-shortener-shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rocket = "0.5.0-rc.2"
shuttle-service = {version = "0.7.2", features = ["web-rocket"]}
serde = "1.0.142"
random-string = "1.0.0"
toml = "0.5"
url = "2.3.1"
urlencoding = "2.1.2"
